grml-tips (0.4.12) unstable; urgency=low

  * Update streaming tips.
  * Update metasploit tip.
  * Add simple webserver with python tip.

 -- Michael Prokop <mika@grml.org>  Fri, 21 Nov 2008 13:25:14 +0100

grml-tips (0.4.11) unstable; urgency=low

  * Add dependency on libterm-readkey-perl.
  * Bump Standards-Version to 3.8.0.

 -- Michael Prokop <mika@grml.org>  Tue, 08 Jul 2008 14:31:30 +0200

grml-tips (0.4.10) unstable; urgency=low

  * Added tip for dmraid.
  * Added tip for ytnef/winmail.dat.

 -- Michael Prokop <mika@grml.org>  Tue, 25 Mar 2008 10:04:11 +0100

grml-tips (0.4.9) unstable; urgency=low

  [ Michael Gebetsroither ]
  * Added tip:
    - Show what happens on /dev/sda0

  [ Michael Prokop ]
  * Bump Standard-Version to 3.7.3 (no further changes).
  * Added tips:
    - Convert Flash to Avi
    - Tip regarding the "unrecognised disk label" problem of fdisk
    - Usage example for cryptsetup / -luks encrypted partition on LVM

 -- Michael Prokop <mika@grml.org>  Sat, 09 Feb 2008 17:21:28 +0100

grml-tips (0.4.8) unstable; urgency=low

  * Add libwww-perl to depends.

 -- Michael Prokop <mika@grml.org>  Sat, 03 Nov 2007 00:29:58 +0100

grml-tips (0.4.7) unstable; urgency=low

  [ Michael Prokop ]
  * Added tips:
    - dns2tcp [thanks, Moritz Augsburger!]
    - extend openssl tip
    - extend gcom tip
    - find dangling symlinks using zsh
    - remote-reboot via SysRQ

  [ Michael Gebetsroither ]
  * Added tips:
    - Configure a MadWifi device for adhoc mode
    - approx with runit supervision

 -- Michael Gebetsroither <michael.geb@gmx.at>  Fri, 26 Oct 2007 21:15:37 +0000

grml-tips (0.4.6) unstable; urgency=low

  * Added tips:
    - Create netboot package for grml-terminalserver
    - Rotate pictures
    - Calculate network / netmask
    - Blacklist tip
    - Create Debian package of perl module
    - SysRq Keys
    - Memcheck/memtest

 -- Michael Prokop <mika@grml.org>  Sat, 18 Aug 2007 23:48:05 +0200

grml-tips (0.4.5) unstable; urgency=low
