@@ -4,9 +4,9 @@ Priority: optional
 Maintainer: Michael Prokop <mika@grml.org>
 Build-Depends: debhelper (>= 4.0.0)
 Standards-Version: 3.8.0
-Homepage: http://hg.grml.org/grml-tips
-XS-Vcs-hg: http://hg.grml.org/grml-tips
-XS-Vcs-Browser: http://hg.grml.org/grml-tips
+Homepage: http://git.grml.org/?p=grml-tips.git
+Vcs-git: git://git.grml.org/grml-tips.git
+Vcs-Browser: http://git.grml.org/?p=grml-tips.git
 
 Package: grml-tips
 Architecture: all
@@ -14,5 +14,3 @@ Depends: ${shlibs:Depends}, ${misc:Depends}, libwww-perl, libterm-readkey-perl
 Description: search for tips and hints via a keyword
  The provided script grml-tips queries a signature file
  for a specific keyword and displays results on stdout.
- .
-  Homepage: http://grml.org/
