@@ -7,6 +7,8 @@ Copyright Holder: Michael Prokop <mika@grml.org>
 
 License:
 
+   This software is copyright (c) 2003++ by Michael Prokop.
+
    This package is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 2 of the License, or
